--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -31,17 +31,19 @@
     <h1 class="headertitle">ARE YOU INTERESTED<br>
       IN BECOMING A<br>
       SHATTER PROOF MODEL?<br>
-      DO YOU HAVE THE DRIVE?<br>
-      WE HAVE A PROCESS.<br>
+      LET’S BEGIN!!<br>
     </h1>
 
-    <h2>First, upon approval of the application, you are immediately implemented into the Shatter Proof promoter program. Promote on your social media accounts and get paid! You will be responsible for digital promotions, you will join an elite business group with other models in an affiliate program referred to as the Shatter Blok Model Ambassador Program. Everyone will be treated like family if one succeeds we all succeed. The existing models in the program will begin promoting you as the newest member of the Shatter Proof family and again the best part, <span>YOU GET PAID TO PROMOTE!</span></h2>
+    <h2>Along with becoming a Shatter Proof Model, you will be given many amazing options in making what we call sit-at-home-finances. Now, let us tell you about our partners at ArtistXP that have inserted an incentive promotional program including all of the SHATTER PROOF MODEL BENEFITS! First, upon approval of your application, you are immediately implemented into the Shatter Proof promoter program. When you promote on your social media accounts, you get paid! You will be responsible for digital promotions and with that you will join an elite business group, with our other models in an affiliate program referred to as the Shatter Proof Model Ambassador Program. Like a close niched family business, if one succeeds, we all succeed. Existing models in the program will promote you as our newest member of the Shatter Proof Models | Talent, which can help you gain footing once you begin your level of promoting and based on the influencing program you choose.
+      <br>
+      <br>
+      <span>YOU CAN GET PAID TO PROMOTE! So, what are you waiting for? Start filling out your application now, the horizon on your career is endless. *Once you are signed up please ask for more information*</span></h2>
 
-    <p>
+  <!--  <p>
       Once you have promoted 50 or more times, you are upgraded into a VIP Membership of Shatter Proof Models, this is where your hard work has paid off.
       <span>Once a VIP member, you will begin being booked on sets, like music videos, major photo shoots, and commercials. You now are getting paid for not only the promotions you are doing but also from the bookings. As well as becoming a known face in the Shatter Blok family.</span>
       So what are you waiting for? Start filling out that application, the horizon on your career is endless.
-    </p>
+    </p>-->
 
   </div>
 </div>
@@ -201,21 +203,17 @@
             <img src="../../assets/images/socialicon-fb.png" alt="socialicon-fb">
 
             <input type="url" class="form-control" name="facebooklink" id="facebooklink" placeholder="" [formControl]="dataForm.controls['facebooklink']" (keyup)="issubmit=0" >
-            <span class="icon_ref">www.https://facebook.com/</span>
+            <span class="icon_ref">https://www.facebook.com/</span>
             <span class="error" *ngIf="!dataForm.controls['facebooklink'].valid && dataForm.controls['facebooklink'].touched && issubmit==1">Give proper URL with http or https.</span>
           </div>
-        </div><!--
-        <mat-form-field>
-          <input matInput placeholder="Amount" type="number" class="example-right-align">
-          <span matPrefix>$&nbsp;</span>
-          <span matSuffix>.00</span>
-        </mat-form-field>-->
+        </div>
+
 
         <div class="form-group col-sm-6 col-xs-12">
           <div class="socialmediafieldinner">
             <img src="../../assets/images/socialicon-ins.png" alt="socialicon-ins">
             <input type="url" class="form-control" name="instagramlink" id="instagramlink" placeholder="" [formControl]="dataForm.controls['instagramlink']" (keyup)="issubmit=0">
-            <span class="icon_ref">www.https://instagram.com/</span>
+            <span class="icon_ref">https://www.instagram.com/</span>
             <span class="error" *ngIf="!dataForm.controls['instagramlink'].valid && dataForm.controls['instagramlink'].touched && issubmit==1">Instagram Link field is required && Give proper URL with http or https.</span>
           </div>
         </div>
@@ -227,7 +225,7 @@
             <img src="../../assets/images/socialicon-twit.png" alt="socialicon-twit">
             <input type="url" class="form-control" name="twitterlink" id="twitterlink" placeholder="" [formControl]="dataForm.controls['twitterlink']" (keyup)="issubmit=0">
 
-            <span class="icon_ref">www.https://twitter.com/</span>
+            <span class="icon_ref">https://www.twitter.com/</span>
             <span class="error" *ngIf="!dataForm.controls['twitterlink'].valid && dataForm.controls['twitterlink'].touched && issubmit==1">Give proper URL with http or https.</span>
           </div>
         </div>
@@ -235,7 +233,7 @@
           <div class="socialmediafieldinner">
             <img src="../../assets/images/modelmayhemlink.png" alt="modelmayhemlink">
             <input type="url" class="form-control" name="modelmayhemlink" id="modelmayhemlink" placeholder="" [formControl]="dataForm.controls['modelmayhemlink']" (keyup)="issubmit=0">
-            <span class="icon_ref">www.https://modelmayhem.com/</span>
+            <span class="icon_ref">https://www.modelmayhem.com/</span>
             <span class="error" *ngIf="!dataForm.controls['modelmayhemlink'].valid && dataForm.controls['modelmayhemlink'].touched && issubmit==1">Give proper URL with http or https.</span>
           </div>
         </div>
