--- a/src/app/musicvideos/musicvideos.component.html
+++ b/src/app/musicvideos/musicvideos.component.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <h2>Music Video Bookings</h2>
-    <p>We Get Our Models in Music Videos on Consistent Basis!
+    <p>We Get Our Talent & Our Client’s Products Placed In Music Video  Productions On A Consistent Basis!
       <!--Check out some of the music videos we  have associated with-->
     </p>
   </div>
