--- a/src/app/our-models/our-models.component.html
+++ b/src/app/our-models/our-models.component.html
@@ -42,7 +42,7 @@
 
 <div class="ourmodelsbannerblock">
   <div class="ourmodelsbannertext">
-    <h1 class="headertitle">Meet The<br> Models/Talent</h1>
+    <h1 class="headertitle">Meet The<br> Models | Talent</h1>
   </div>
 </div>
 
