--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -5,7 +5,7 @@
 
 <div class="partnersbannerblock">
   <div class="innerbannertext">
-    <h1>Partnership</h1>
+    <h1>Partnerships</h1>
   </div>
 </div>
 
@@ -43,7 +43,7 @@
    <div class="partnersblock3_wrapper">
     <h1 class="headertitle">We are AudioDeadline</h1>
     <h3>We are created by artists, for artists<!--We are created by artists, for artists--></h3>
-    <p class="smalltxt">Our motto is All Rise Together (ART) – and we take pride in the fact that our event is designed to helps artists, fans and other music enthusiasts move unilaterally in one single direction. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be witness the artist’s experience as they go through the emotional mastery of song production! Regardless of who you are, or what you’re doing, we would love for you to be part of our music industry revolution!<!--Our motto is All Rise Together (ART) - and we take pride in building long lasting bonds between artists and their fans. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be live-streamed to the artist’s experience to support them as they go through the emotional mastery of song production! No matter who you are or what you’re doing, we would love for you to be part of our music industry revolution!--></p>
+    <p class="smalltxt">Our motto is All Rise Together (ART) – and we take pride in the fact that our event is designed to helps artists, fans and other music enthusiasts move unilaterally in one single direction. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to witness the artist’s experience as they go through the emotional mastery of song production! Regardless of who you are, or what you’re doing, we would love for you to be part of our music industry revolution!<!--Our motto is All Rise Together (ART) - and we take pride in building long lasting bonds between artists and their fans. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be live-streamed to the artist’s experience to support them as they go through the emotional mastery of song production! No matter who you are or what you’re doing, we would love for you to be part of our music industry revolution!--></p>
      <h2>The Deadline Experience<!--The Deadline Experience--></h2>
      <p>
        Now, for the first time ever, we are live-streaming <span>EVERYTHING</span> that transpires in a sound studio when a song is being made with Flii Stylz as our host. Our contest winners, from competitions held on ArtistXP, step up to the challenge of creating a new original song live within a time-span of EIGHT hours in front of all their fans. Will they be able to live up to the challenge? Let’s find out!<!--Music lovers around the world come together to experience a truly unique moment in music history. Now, for the first time ever, we are live-streaming <span>EVERYTHING</span> that happens in a sound studio when a song is being made. Our contest winners, step up to the challenge of creating a new original song live in front of all their fans.<br><br>
