--- a/src/app/musicdivision/musicdivision.component.html
+++ b/src/app/musicdivision/musicdivision.component.html
@@ -281,7 +281,8 @@
           <h2>have a question?</h2>
           <div class="s_contact_block_form">
             <form>
-              <input type="text" name="name" placeholder="Name"> <input type="email" name="email" placeholder="Email Address">
+              <input type="text" name="name" placeholder="Name">
+              <input type="email" name="email" placeholder="Email Address">
               <textarea type="text" placeholder="Message *"></textarea>
               <button class="s_form_submit">send</button>
             </form>
