--- a/src/app/uploader/uploader.component.html
+++ b/src/app/uploader/uploader.component.html
@@ -13,10 +13,12 @@
   <!--<progressbar *ngIf=" apiService.progress[filenamevalc] !=null && apiService.progress[filenamevalc]>0" class="progress-striped active" max="100" [value]="apiService.progress[filenamevalc]" [type]="type">{{apiService.progress[filenamevalc]}}% </progressbar>-->
 
   <span class="uploadthum" *ngIf="apiService.fileservername!=null && apiService.fileservername[filenamevalc]!=null && apiService.fileservername[filenamevalc].length>0">
-      <div class="upload_caption">* Please select the image that you want to select as your ShatterBlok profile picture.</div>
+      <div  *ngIf="!profileimgval"  [hidden]="!profileimgval">* Please select the image that you want to select as your ShatterBlok profile picture.</div>
+      <div  *ngIf="profileimgval" class="upload_caption">* Please select the image that you want to select as your ShatterBlok profile picture.</div>
                   <span class="uploadthumimgbox" *ngFor="let img of apiService.fileservername[filenamevalc] ;let i=index;">
 
                       <span class="uploadthumimgbox_span" >
+                          <span *ngIf="!profileimgval" [hidden]="!profileimgval">
                           <a title="Set Profile Picture" [ngClass]="img==profileimage ? 'thumb_gallery_uploadselect' : 'thumb_gallery_upload'" (click)="profileImg(img)"> <img src="../../assets/images/upload_image.png">
                           </a>
 
@@ -25,13 +27,23 @@
                                <img src="../../assets/images/upload_image.png">
 
                            </a>
+                          </span>
+                          <span *ngIf="profileimgval">
+                          <a title="Set Profile Picture" [ngClass]="img==profileimage ? 'thumb_gallery_uploadselect' : 'thumb_gallery_upload'" (click)="profileImg(img)"> <img src="../../assets/images/upload_image.png">
+                          </a>
+
+                           <a title="Set Second Picture" class="thumb_gallery_upload2" [ngClass]="img==second_image ? 'thumb_gallery_uploadselect' : 'thumb_gallery_upload '" (click)="profileImg2(img)">
+
+                               <img src="../../assets/images/upload_image.png">
+
+                           </a>
+                          </span>
                         <img  src="{{filepathc}}/{{img}}" >
                         <button (click)="delimage(i)">Delete</button>
 <!--                          <span>{{img}}==={{profileimage}}</span>-->
                       </span>
                   </span>
                 </span>
-
 
 </div>
 
