--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7962,6 +7962,7 @@ p.headertitlepara{
 .formdivwrapper form .socialmediafieldinner #instagramlink { padding-left: 48%!important; }
 .formdivwrapper form .socialmediafieldinner #facebooklink { padding-left: 49%!important; }
 .formdivwrapper form .socialmediafieldinner #modelmayhemlink { padding-left: 56%!important; }
+.formdivwrapper form .socialmediafieldinner #soundcloudlink { padding-left: 50%!important; }
 
 
 
