--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -273,65 +273,7 @@
         <div class="form-group col-xs-12">
 
           <!--<app-uploader uploadtype="single" [filenameval]="uploader" ></app-uploader>-->
-          <app-uploader uploadtype="multiple" [uploadpath]="modeluploadpath" [filepath]="modelfilepath"  [filenameval]="uploader" ></app-uploader>
-
-          <!--  <button (click)="checkupload()">Check uploads</button>-->
-
-          <!--<div ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
-          </div>
-
-          <label class="upload-button">
-            <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" multiple>
-            or choose file(s)
-          </label>
-
-          <button type="button" class="start-upload-btn" (click)="startUpload()">
-            Start Upload
-          </button>-->
-          <!--</div>-->
-
-          <!-- <div class="progress">
-             <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="max-width: 100%">
-               <span class="title">100%</span>
-             </div>
-
-           </div>
-           <div class="uploadbutton text-right">
-             <label for="file-upload" class="custom-file-upload">
-               Upload Files
-             </label>
-             <input id="file-upload" type="file"/>
->>>>>>> 5cb365e49affd633c8b86452ab35c4afc9aa855b
-
-         <app-uploader uploadtype="single" [filenameval]="uploader" ></app-uploader>
-         <app-uploader uploadtype="multiple" [filenameval]="uploader1" ></app-uploader>
-
-         <button (click)="checkupload()">Check uploads</button>
-
-        <div ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
-         </div>
-         <label class="upload-button">
-           <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" multiple>
-           or choose file(s)
-         </label>
-         <button type="button" class="start-upload-btn" (click)="startUpload()">
-           Start Upload
-         </button>-->
-          <!--</div>-->
-
-          <!-- <div class="progress">
-             <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="max-width: 100%">
-               <span class="title">100%</span>
-             </div>
-           </div>
-           <div class="uploadbutton text-right">
-             <label for="file-upload" class="custom-file-upload">
-               Upload Files
-             </label>
-             <input id="file-upload" type="file"/>
-             &lt;!&ndash;<input type="file" id="file" (change)="handleFileInput($event.target.files)">&ndash;&gt;
-           </div>
-         </div>-->
+          <app-uploader uploadtype="multiple" [uploadpath]="modeluploadpath" [filepath]="modelfilepath"  [filenameval]="uploader" [profileimg]="profileimg"></app-uploader>
 
         </div>
       </div>
