--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -24,7 +24,8 @@
 
 <div class="becomeamemberblock1">
   <div class="becomeamemberblock1_wrapper_img">
-    <img src="../assets/images/becomeamemberblock1_wrapper_img.png"  alt="#">
+    <!--<img src="../assets/images/becomeamemberblock1_wrapper_img.png"  alt="#">-->
+    <img src="../assets/images/interestestedModelImage.png"  alt="#">
   </div>
 
   <div class="becomeamemberblock1_wrapper">
