--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
 
                 <div class="fill" style="background-image:url('../../assets/images/new_home_slider1.jpg');"></div>
                 <div class="animation-box">
-                    <div class="firstcarousal"><h1>Shatter proof Models</h1></div>
+                    <div class="firstcarousal"><h1>Shatter proof Models | Talent</h1></div>
                 </div>
             </div>
             <div class="item">
@@ -274,7 +274,8 @@
                     Out Our Model | Talent Division</a>
             </div>
             <div class="newhomesproofmodeldivimgright">
-                <img src="../assets/images/newhome_sproofmodeldiv_imgright.png" class="" alt="#">
+                <!--<img src="../assets/images/newhome_sproofmodeldiv_imgright.png" class="" alt="#">-->
+                <img src="../assets/images/newhome_sproofmodeldiv_imgright2.png" class="" alt="#">
             </div>
 
         </div>
