--- a/src/app/model-marketing/model-marketing.component.html
+++ b/src/app/model-marketing/model-marketing.component.html
@@ -17,7 +17,7 @@
 
    <div class="modelmarketingblockcontentinnerwrapper">
     <div class="modelmarketingblockcontentinner">
-      <h1>Shatter Proof <br>Models/Talent</h1>
+      <h1>Shatter Proof <br>Models|Talent</h1>
       <p>prides itself in working with an exceptional<br> quality of staff / models / talent which is<br> always our first priority. </p>
       <a [routerLink]="['/join-the-talent-team/']" target="_blank" class="btndeepred">Apply to be a Shatter Proof Model</a>
     </div>
