--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -5,7 +5,7 @@
   <ul class="sidemenuleftposition">
     <li class="active"><a [routerLink]="['/']">Home<i class="fa fa-chevron-right"></i></a></li>
     <li><!--<a href="javascript:void(0)">Who we are <i class="fa fa-chevron-right"></i></a>-->
-      <a [routerLink]="['/whoweare']" class="opensubsidemenu"  onclick="opensubsidemenu1()">Who we are<i class="fa fa-chevron-right"></i></a>
+      <a [routerLink]="['/whoweare']" class="opensubsidemenu" >Who we are<i class="fa fa-chevron-right"></i></a>
         <ul id="subsidemenuDropdown1" class="newsubsidemenu">
        <!-- <li class="active"><a >About us<i class="fa fa-chevron-right"></i></a></li>-->
         <li><a onclick="opensubsidemenu1()" [routerLink]="['/partnerships-affiliates']">Partnerships & Affiliates<!--Partners--><i class="fa fa-chevron-right"></i></a></li>
