--- a/src/app/who-we-are/who-we-are.component.html
+++ b/src/app/who-we-are/who-we-are.component.html
@@ -134,7 +134,7 @@
           <h3>Colin Tiley <span>London Alley</span></h3>
           <p class="testimonialtxt"><span class="testimonialcommentlefticon">
             <img src="../assets/images/testimonialcommentlefticon.png" class="" alt="#"></span>
-            Shatter Proof Models are great to work with, fun and very professional. I work with this company all the time when I am in need of talent for the video productions I direct.
+            " Shatter Proof Models are great to work with, fun and very professional. I work with this company all the time when I am in need of talent for the video productions I direct. "
             <span class="testimonialcommentrighticon"><img src="../assets/images/testimonialcommenrighticon.png" class="" alt="#"></span>
           </p>
         </div>
@@ -147,8 +147,8 @@
           <h3>John Vasquez <span>Owner</span></h3>
           <p class="testimonialtxt">
             <span class="testimonialcommentlefticon"><img src="../assets/images/testimonialcommentlefticon.png" class="" alt="#"></span>
-            Attractive, knowledgeable and professional promotional models that were able to move and promote our product NUVO. Shatter Proof
-            Marketing did and has done an amazing job creating awareness and sells in key Hollywood & Los Angeles nightlife venues. We thank you..
+            " Attractive, knowledgeable and professional promotional models that were able to move and promote our product NUVO. Shatter Proof
+            Marketing did and has done an amazing job creating awareness and sells in key Hollywood & Los Angeles nightlife venues. We thank you.. "
             <span class="testimonialcommentrighticon"><img src="../assets/images/testimonialcommenrighticon.png" class="" alt="#"></span>
           </p>
         </div>
