--- a/src/app/music-management/music-management.component.html
+++ b/src/app/music-management/music-management.component.html
@@ -92,7 +92,7 @@
 </div>
 
 <div class="musicmanagementblock3" id="div_id">
-  <div class="formdivwrapper">
+  <div class="formdivwrapper new_socialmedia">
     <h1 class="headertitle">Submission Process</h1>
     <h3 class="headertitle2">Want to share your music with us and have a chance to succeed? </h3>
     <p class="headertitlepara">Fill out the Submission Form below and we will review your content for the chance to move you a step forward to the success you have always wanted. We would love to collaborate and come up with a precise marketing plan that will fit your needs. </p>
@@ -158,8 +158,8 @@
         <div class="form-group col-sm-6 col-xs-12">
           <div class="socialmediafieldinner">
             <img src="../../assets/images/socialicon-soundcloud.png" alt="socialicon-soundcloud">
-            <input type="url" class="form-control" name="soundcloudlink" id="soundcloudlink" placeholder="" [formControl]="myForm.controls['soundcloud']" (keyup)="issubmit=0" >
-            <span class="icon_ref">https://www.soundcloud.com/</span>
+            <input type="url" class="form-control" name="soundcloudlink" id="soundcloudlink" placeholder="Soundcloud Link" [formControl]="myForm.controls['soundcloud']" (keyup)="issubmit=0" >
+            <!--<span class="icon_ref">https://www.soundcloud.com/</span>-->
             <span class="error" *ngIf="!myForm.controls['soundcloud'].valid && myForm.controls['soundcloud'].touched && issubmit==1">Give proper URL with http or https.</span>
           </div>
         </div>
