--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -5,9 +5,10 @@
   <ul class="sidemenuleftposition">
     <li class="active"><a [routerLink]="['/']">Home<i class="fa fa-chevron-right"></i></a></li>
     <li><!--<a href="javascript:void(0)">Who we are <i class="fa fa-chevron-right"></i></a>-->
-      <a [routerLink]="['/whoweare']" class="opensubsidemenu" >Who we are<i class="fa fa-chevron-right"></i></a>
+      <a  class="opensubsidemenu" >Who we are<i class="fa fa-chevron-right"></i></a>
         <ul id="subsidemenuDropdown1" class="newsubsidemenu">
        <!-- <li class="active"><a >About us<i class="fa fa-chevron-right"></i></a></li>-->
+        <li><a onclick="opensubsidemenu1()" [routerLink]="['/whoweare']">About Us<!--Partners--><i class="fa fa-chevron-right"></i></a></li>
         <li><a onclick="opensubsidemenu1()" [routerLink]="['/partnerships-affiliates']">Partnerships & Affiliates<!--Partners--><i class="fa fa-chevron-right"></i></a></li>
       </ul>
     </li>
@@ -20,9 +21,10 @@
       </ul>
     </li>
     <li>
-      <a [routerLink]="['/model-talent-division']" class="opensubsidemenu" onclick="opensubsidemenu()">Model | Talent Division<!--Model Management--><i class="fa fa-chevron-right"></i></a>
+      <a class="opensubsidemenu" >Model | Talent Division<!--Model Management--><i class="fa fa-chevron-right"></i></a>
       <ul id="subsidemenuDropdown" class="newsubsidemenu">
 
+        <li><a onclick="opensubsidemenu1()" [routerLink]="['/model-talent-division']">Model | Talent<!--our models--><i class="fa fa-chevron-right"></i></a></li>
         <li><a onclick="opensubsidemenu1()" [routerLink]="['/our-models-talent']">Our Models | Talent<!--our models--><i class="fa fa-chevron-right"></i></a></li>
         <li><a onclick="opensubsidemenu1()" [routerLink]="['/join-the-talent-team']">Join The Talent Team<!--Become a Model--><i class="fa fa-chevron-right"></i></a></li>
 <!--        <li><a [routerLink]="['/promo-events']">Promo & Events<i class="fa fa-chevron-right"></i></a></li>-->
