--- a/src/app/model-marketing/model-marketing.component.html
+++ b/src/app/model-marketing/model-marketing.component.html
@@ -27,8 +27,8 @@
 
    <div class="modelmarketingblockoverlay">
      <div class="modelmarketingblockgroupimg">
-       <img src="../assets/images/modelmarketingblockgroupimg.png" alt="modelmarketingblockgroupimg" class="img1hide">
-       <img src="../assets/images/modelmarketingblockgroupimgmodile.png" alt="modelmarketingblockgroupimg" class="modelmarketingblockgroupimgmodile">
+       <img src="../assets/images/modelmarketingblockgroupimg_new.png" alt="modelmarketingblockgroupimg" class="img1hide">
+       <img src="../assets/images/modelmarketingblockgroupimgmodile_new.png" alt="modelmarketingblockgroupimg" class="modelmarketingblockgroupimgmodile">
      </div>
      <!--<img src="../assets/images/modelmarketingblockoverlay.png" alt="modelmarketingblockoverlay">-->
    </div>
@@ -42,13 +42,16 @@
 
 <div class="container-fluid modelmarketingblock1">
   <div class="modelmarketingblock1_wrapper_img">
-    <img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1_wrapper_imgbg.png">
+    <!--<img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1_wrapper_imgbg.png">-->
+    <img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1_wrapper_imgbg_new.png">
+
   </div>
   <div class="modelmarketingblock1_wrapper">
     <h2>Why our Models<br> are Unique</h2>
     <div class="modelmarketingblock1_content">
       <div class="modelmarketingblock1_content_left">
-        <img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1contentleftimg.png">
+        <!--<img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1contentleftimg.png">-->
+        <img _ngcontent-c1="" alt="#" src="../assets/images/modelmarketingblock1contentleftimg_new.png">
       </div>
       <div class="modelmarketingblock1_content_right">
         <p><span class="topcontenttxt"><span class="reduppercasetxt">Shatter Proof Models</span> is a division of Shatter Blok that has experience that has helped us, and our clients gain a unique insight into the promotion and marketing industry with unconventional needs that surround it. We specialize in Model | talent management, <span class="yellowtxt">promotional hosting, sales staffing, print, runway, media and event staffing as well. We customize our staffing</span> solutions to meet and exceed expectations by working well with others that include other staffing companies that use our services for understaffing and or bookings. No excuses just execution.</span> <span class="smalltxt">We keep track of our staff’s performance after working each program and make sure our team is at the highest level which makes us one of the best staffing
@@ -69,14 +72,12 @@
   <div class="modelmarketingblock2_wrapper">
     <h2>Convenience and Success<br> are highly<br> important to us.</h2>
     <div class="modelmarketingblock2_content">
-      <p><span class="redtxt">Shatter Proof Models</span> account managers can act faster than most because we do not need to go<br> out to look for staff because they are already in our database and we have a variety<br> to comply with your needs. <span class="pt20">In some cases, we have been able to staff over 45,000<br> hours each year with a 99% success rate and have worked<br> in 8 locations and areas across the United States.</span> <span class="pt20">So far <span class="yellowtxt">Shatter Proof Models</span> has been able to put its staff worldwide promotions<br> with prestigious beverage companies (liquor and non-liquor) such as:<br> Patron | Margarita King | NUVO Vodka | Red Bull | Monster Energy<br> Drink and EX Drinks. Along with that we have been able to provide product<br> placement and talent bookings music video Productions for DJ Khaled | Lil Wayne |<br> Jamie Foxx | Chris Brown | P-Diddy | David Guetta and international print jobs for<br> Windsor catalogue | Maxim | Sports Illustrated | Playboy USA and television commercials<br> for Nike | Xbox | Coca Cola | Adidas and excelled in other levels of media that expand our experience.</span>
+      <p><span class="redtxt">Shatter Proof Models</span> account managers can act faster than most because we do not need to go<br> out to look for staff because they are already in our database and we have a variety<br> to comply with your needs. <span class="pt20">In some cases, we have been able to staff over 45,000<br> hours each year with a 99% success rate and have worked<br> in 8 locations and areas across the United States.</span> <span class="pt20">So far <span class="yellowtxt">Shatter Proof Models|Talent</span> has been able to put its staff worldwide promotions<br> with prestigious beverage companies (liquor and non-liquor) such as:<br> Patron | Margarita King | NUVO Vodka | Red Bull | Monster Energy<br> Drink and EX Drinks. Along with that we have been able to provide product<br> placement and talent bookings music video Productions for DJ Khaled | Lil Wayne |<br> Jamie Foxx | Chris Brown | P-Diddy | David Guetta and international print jobs for<br> Windsor catalogue | Maxim | Sports Illustrated | Playboy USA and television commercials<br> for Nike | Xbox | Coca Cola | Adidas and excelled in other levels of media that expand our experience.</span>
       </p>
       <a class="btnyellow" [routerLink]="['/join-the-talent-team/']" target="_blank">Apply to be a Model</a>
     </div>
   </div>
 </div>
-
-
 
 <app-footer></app-footer>
 
