--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6671,18 +6671,23 @@ body{
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	align-items: center;
+	margin-top: 20px;
 }
+
 
 .modelmarketingblock1_content_left{
 	margin-left: -22%;
-	margin-top: -6%;
+	/*margin-top: -6%;*/
+	margin-top: 0%;
 }
+
 
 .modelmarketingblock1_content_right p{ margin: 0; padding: 0; font-size: 24px; color: #ffffff; font-family: 'CenturyGothic'; line-height: 30px; width:100%; text-align: left;}
 .modelmarketingblock1_content_right p span.reduppercasetxt{color: #f20860; text-transform: uppercase;font-family: 'CenturyGothicBold';}
 .modelmarketingblock1_content_right p span.yellowtxt{color: #eeba1c; }
 .modelmarketingblock1_content_right p span.smalltxt{color: #b2b1bc; font-size: 18px;  line-height: 24px; display: block; margin-top: 30px;}
-.modelmarketingblock1_content_right {margin-left: -5%;}
+/*.modelmarketingblock1_content_right {margin-left: -5%;}*/
+.modelmarketingblock1_content_right {margin-left: 0%;}
 
 .topcontenttxt{
 	width: 89%;
